Challenge texts valid max size

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>idea_la-admin</title>
+    <title>Admin - Imagina tu Ciudá</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but idea_la-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Hola! Por favor habilita JavaScript en tu navegador. Imagina tu Ciudá lo necesita para su funcionamiento correcto.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
